// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`covid data All covid measures 1`] = `
Object {
  "data": Object {
    "root": Object {
      "covid_measures": Array [
        Object {
          "all_year_covid_data": Array [
            Object {
              "covid_estimates": Array [
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 0,
                  "vote": 999,
                },
                Object {
                  "est_doc": "SEA",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 0,
                  "vote": 9,
                },
                Object {
                  "est_doc": "SEB",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 9,
                  "vote": 9,
                },
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "326",
                    "name": "Treasury Board of Canada Secretariat",
                  },
                  "org_id": "326",
                  "stat": 999,
                  "vote": 0,
                },
                Object {
                  "est_doc": "SEB",
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 0,
                  "vote": 9,
                },
              ],
              "covid_expenditures": Array [
                Object {
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 1,
                  "vote": 3,
                },
                Object {
                  "org": Object {
                    "id": "326",
                    "name": "Treasury Board of Canada Secretariat",
                  },
                  "org_id": "326",
                  "stat": 0,
                  "vote": 4,
                },
                Object {
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 9,
                  "vote": 0,
                },
              ],
              "fiscal_year": 2020,
            },
            Object {
              "covid_estimates": Array [
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "326",
                    "name": "Treasury Board of Canada Secretariat",
                  },
                  "org_id": "326",
                  "stat": 999,
                  "vote": 0,
                },
              ],
              "covid_expenditures": Array [],
              "fiscal_year": 2021,
            },
          ],
          "has_covid_data": Array [
            Object {
              "years_with_estimates": Array [
                "2020",
                "2021",
              ],
              "years_with_expenditures": Array [
                "2020",
              ],
            },
          ],
          "id": "COV001",
          "name": "measure 1",
          "one_year_covid_data": Array [
            Object {
              "covid_estimates": Array [
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 0,
                  "vote": 999,
                },
                Object {
                  "est_doc": "SEA",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 0,
                  "vote": 9,
                },
                Object {
                  "est_doc": "SEB",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 9,
                  "vote": 9,
                },
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "326",
                    "name": "Treasury Board of Canada Secretariat",
                  },
                  "org_id": "326",
                  "stat": 999,
                  "vote": 0,
                },
                Object {
                  "est_doc": "SEB",
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 0,
                  "vote": 9,
                },
              ],
              "covid_expenditures": Array [
                Object {
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 1,
                  "vote": 3,
                },
                Object {
                  "org": Object {
                    "id": "326",
                    "name": "Treasury Board of Canada Secretariat",
                  },
                  "org_id": "326",
                  "stat": 0,
                  "vote": 4,
                },
                Object {
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 9,
                  "vote": 0,
                },
              ],
              "fiscal_year": 2020,
            },
          ],
        },
        Object {
          "all_year_covid_data": Array [
            Object {
              "covid_estimates": Array [
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 8,
                  "vote": 99,
                },
                Object {
                  "est_doc": "SEA",
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 99,
                  "vote": 99,
                },
                Object {
                  "est_doc": "SEB",
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 9,
                  "vote": 9,
                },
                Object {
                  "est_doc": "SEC",
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 9,
                  "vote": 0,
                },
                Object {
                  "est_doc": "SEC",
                  "org": Object {
                    "id": "1",
                    "name": "Agriculture and Agri-Food Canada",
                  },
                  "org_id": "1",
                  "stat": 9,
                  "vote": 0,
                },
              ],
              "covid_expenditures": Array [
                Object {
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 2,
                  "vote": 3,
                },
                Object {
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 6,
                  "vote": 6,
                },
              ],
              "fiscal_year": 2020,
            },
            Object {
              "covid_estimates": Array [
                Object {
                  "est_doc": "SEC",
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 9,
                  "vote": 0,
                },
              ],
              "covid_expenditures": Array [
                Object {
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 999,
                  "vote": 7,
                },
              ],
              "fiscal_year": 2021,
            },
          ],
          "has_covid_data": Array [
            Object {
              "years_with_estimates": Array [
                "2020",
                "2021",
              ],
              "years_with_expenditures": Array [
                "2020",
                "2021",
              ],
            },
          ],
          "id": "COV002",
          "name": "measure 2",
          "one_year_covid_data": Array [
            Object {
              "covid_estimates": Array [
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 8,
                  "vote": 99,
                },
                Object {
                  "est_doc": "SEA",
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 99,
                  "vote": 99,
                },
                Object {
                  "est_doc": "SEB",
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 9,
                  "vote": 9,
                },
                Object {
                  "est_doc": "SEC",
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 9,
                  "vote": 0,
                },
                Object {
                  "est_doc": "SEC",
                  "org": Object {
                    "id": "1",
                    "name": "Agriculture and Agri-Food Canada",
                  },
                  "org_id": "1",
                  "stat": 9,
                  "vote": 0,
                },
              ],
              "covid_expenditures": Array [
                Object {
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 2,
                  "vote": 3,
                },
                Object {
                  "org": Object {
                    "id": "552",
                    "name": "Polar Knowledge Canada",
                  },
                  "org_id": "552",
                  "stat": 6,
                  "vote": 6,
                },
              ],
              "fiscal_year": 2020,
            },
          ],
        },
        Object {
          "all_year_covid_data": Array [
            Object {
              "covid_estimates": Array [
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 0,
                  "vote": 9,
                },
                Object {
                  "est_doc": "SEA",
                  "org": Object {
                    "id": "326",
                    "name": "Treasury Board of Canada Secretariat",
                  },
                  "org_id": "326",
                  "stat": 9,
                  "vote": 99,
                },
              ],
              "covid_expenditures": Array [
                Object {
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 3,
                  "vote": 0,
                },
                Object {
                  "org": Object {
                    "id": "326",
                    "name": "Treasury Board of Canada Secretariat",
                  },
                  "org_id": "326",
                  "stat": 0,
                  "vote": 5,
                },
              ],
              "fiscal_year": 2020,
            },
            Object {
              "covid_estimates": Array [
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 0,
                  "vote": 9,
                },
              ],
              "covid_expenditures": Array [],
              "fiscal_year": 2021,
            },
          ],
          "has_covid_data": Array [
            Object {
              "years_with_estimates": Array [
                "2020",
                "2021",
              ],
              "years_with_expenditures": Array [
                "2020",
              ],
            },
          ],
          "id": "COV003",
          "name": "measure 3",
          "one_year_covid_data": Array [
            Object {
              "covid_estimates": Array [
                Object {
                  "est_doc": "ME",
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 0,
                  "vote": 9,
                },
                Object {
                  "est_doc": "SEA",
                  "org": Object {
                    "id": "326",
                    "name": "Treasury Board of Canada Secretariat",
                  },
                  "org_id": "326",
                  "stat": 9,
                  "vote": 99,
                },
              ],
              "covid_expenditures": Array [
                Object {
                  "org": Object {
                    "id": "133",
                    "name": "National Defence",
                  },
                  "org_id": "133",
                  "stat": 3,
                  "vote": 0,
                },
                Object {
                  "org": Object {
                    "id": "326",
                    "name": "Treasury Board of Canada Secretariat",
                  },
                  "org_id": "326",
                  "stat": 0,
                  "vote": 5,
                },
              ],
              "fiscal_year": 2020,
            },
          ],
        },
      ],
    },
  },
}
`;

exports[`covid data Gov covid estimates summary 1`] = `
Object {
  "data": Object {
    "root": Object {
      "gov": Object {
        "all_year_summaries": Array [
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "stat": 1007,
                "vote": 1107,
              },
              Object {
                "est_doc": "SEA",
                "stat": 108,
                "vote": 207,
              },
              Object {
                "est_doc": "SEB",
                "stat": 18,
                "vote": 27,
              },
              Object {
                "est_doc": "SEC",
                "stat": 18,
                "vote": 0,
              },
            ],
            "covid_expenditures": Object {
              "stat": 21,
              "vote": 21,
            },
            "fiscal_year": 2020,
            "measure_counts": Array [
              Object {
                "with_authorities": 3,
                "with_spending": 3,
              },
            ],
            "org_counts": Array [
              Object {
                "with_authorities": 4,
                "with_spending": 3,
              },
            ],
            "top_spending_measures": Array [
              Object {
                "id": "COV002",
                "name": "measure 2",
              },
            ],
            "top_spending_orgs": Array [
              Object {
                "name": "Polar Knowledge Canada",
                "org_id": "552",
              },
              Object {
                "name": "National Defence",
                "org_id": "133",
              },
              Object {
                "name": "Treasury Board of Canada Secretariat",
                "org_id": "326",
              },
            ],
          },
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "stat": 999,
                "vote": 9,
              },
              Object {
                "est_doc": "SEC",
                "stat": 9,
                "vote": 0,
              },
            ],
            "covid_expenditures": Object {
              "stat": 999,
              "vote": 7,
            },
            "fiscal_year": 2021,
            "measure_counts": Array [
              Object {
                "with_authorities": 3,
                "with_spending": 1,
              },
            ],
            "org_counts": Array [
              Object {
                "with_authorities": 3,
                "with_spending": 1,
              },
            ],
            "top_spending_measures": Array [
              Object {
                "id": "COV002",
                "name": "measure 2",
              },
            ],
            "top_spending_orgs": Array [
              Object {
                "name": "Polar Knowledge Canada",
                "org_id": "552",
              },
            ],
          },
        ],
        "one_year_summary": Array [
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "stat": 1007,
                "vote": 1107,
              },
              Object {
                "est_doc": "SEA",
                "stat": 108,
                "vote": 207,
              },
              Object {
                "est_doc": "SEB",
                "stat": 18,
                "vote": 27,
              },
              Object {
                "est_doc": "SEC",
                "stat": 18,
                "vote": 0,
              },
            ],
            "covid_expenditures": Object {
              "stat": 21,
              "vote": 21,
            },
            "fiscal_year": 2020,
            "measure_counts": Array [
              Object {
                "with_authorities": 3,
                "with_spending": 3,
              },
            ],
            "org_counts": Array [
              Object {
                "with_authorities": 4,
                "with_spending": 3,
              },
            ],
            "top_spending_measures": Array [
              Object {
                "id": "COV002",
                "name": "measure 2",
              },
            ],
            "top_spending_orgs": Array [
              Object {
                "name": "Polar Knowledge Canada",
                "org_id": "552",
              },
              Object {
                "name": "National Defence",
                "org_id": "133",
              },
              Object {
                "name": "Treasury Board of Canada Secretariat",
                "org_id": "326",
              },
            ],
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Org covid estimates summary 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "all_year_summaries": Array [
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "stat": 8,
                "vote": 1107,
              },
              Object {
                "est_doc": "SEA",
                "stat": 0,
                "vote": 9,
              },
              Object {
                "est_doc": "SEB",
                "stat": 9,
                "vote": 9,
              },
            ],
            "covid_expenditures": Object {
              "stat": 6,
              "vote": 6,
            },
            "fiscal_year": 2020,
          },
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "stat": 0,
                "vote": 9,
              },
            ],
            "covid_expenditures": Object {
              "stat": 0,
              "vote": 0,
            },
            "fiscal_year": 2021,
          },
        ],
        "name": "National Defence",
        "one_year_summary": Array [
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "stat": 8,
                "vote": 1107,
              },
              Object {
                "est_doc": "SEA",
                "stat": 0,
                "vote": 9,
              },
              Object {
                "est_doc": "SEB",
                "stat": 9,
                "vote": 9,
              },
            ],
            "covid_expenditures": Object {
              "stat": 6,
              "vote": 6,
            },
            "fiscal_year": 2020,
          },
        ],
        "org_id": "133",
      },
    },
  },
}
`;

exports[`covid data Org covid measures 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "all_year_measures": Array [
          Object {
            "all_year_covid_data": Array [
              Object {
                "covid_estimates": Array [
                  Object {
                    "est_doc": "ME",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 0,
                    "vote": 999,
                  },
                  Object {
                    "est_doc": "SEA",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 0,
                    "vote": 9,
                  },
                  Object {
                    "est_doc": "SEB",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 9,
                    "vote": 9,
                  },
                ],
                "covid_expenditures": Array [
                  Object {
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 1,
                    "vote": 3,
                  },
                ],
                "fiscal_year": 2020,
              },
            ],
            "has_covid_data": Array [
              Object {
                "years_with_estimates": Array [
                  "2020",
                  "2021",
                ],
                "years_with_expenditures": Array [
                  "2020",
                ],
              },
            ],
            "id": "COV001",
            "name": "measure 1",
            "one_year_covid_data": Array [
              Object {
                "covid_estimates": Array [
                  Object {
                    "est_doc": "ME",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 0,
                    "vote": 999,
                  },
                  Object {
                    "est_doc": "SEA",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 0,
                    "vote": 9,
                  },
                  Object {
                    "est_doc": "SEB",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 9,
                    "vote": 9,
                  },
                ],
                "covid_expenditures": Array [
                  Object {
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 1,
                    "vote": 3,
                  },
                ],
                "fiscal_year": 2020,
              },
            ],
          },
          Object {
            "all_year_covid_data": Array [
              Object {
                "covid_estimates": Array [
                  Object {
                    "est_doc": "ME",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 8,
                    "vote": 99,
                  },
                ],
                "covid_expenditures": Array [
                  Object {
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 2,
                    "vote": 3,
                  },
                ],
                "fiscal_year": 2020,
              },
            ],
            "has_covid_data": Array [
              Object {
                "years_with_estimates": Array [
                  "2020",
                  "2021",
                ],
                "years_with_expenditures": Array [
                  "2020",
                  "2021",
                ],
              },
            ],
            "id": "COV002",
            "name": "measure 2",
            "one_year_covid_data": Array [
              Object {
                "covid_estimates": Array [
                  Object {
                    "est_doc": "ME",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 8,
                    "vote": 99,
                  },
                ],
                "covid_expenditures": Array [
                  Object {
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 2,
                    "vote": 3,
                  },
                ],
                "fiscal_year": 2020,
              },
            ],
          },
          Object {
            "all_year_covid_data": Array [
              Object {
                "covid_estimates": Array [
                  Object {
                    "est_doc": "ME",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 0,
                    "vote": 9,
                  },
                ],
                "covid_expenditures": Array [
                  Object {
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 3,
                    "vote": 0,
                  },
                ],
                "fiscal_year": 2020,
              },
              Object {
                "covid_estimates": Array [
                  Object {
                    "est_doc": "ME",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 0,
                    "vote": 9,
                  },
                ],
                "covid_expenditures": Array [],
                "fiscal_year": 2021,
              },
            ],
            "has_covid_data": Array [
              Object {
                "years_with_estimates": Array [
                  "2020",
                  "2021",
                ],
                "years_with_expenditures": Array [
                  "2020",
                ],
              },
            ],
            "id": "COV003",
            "name": "measure 3",
            "one_year_covid_data": Array [
              Object {
                "covid_estimates": Array [
                  Object {
                    "est_doc": "ME",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 0,
                    "vote": 9,
                  },
                ],
                "covid_expenditures": Array [
                  Object {
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 3,
                    "vote": 0,
                  },
                ],
                "fiscal_year": 2020,
              },
            ],
          },
        ],
        "one_year_measures": Array [
          Object {
            "covid_data": Array [
              Object {
                "covid_estimates": Array [
                  Object {
                    "est_doc": "ME",
                    "org": Object {
                      "id": "133",
                      "name": "National Defence",
                    },
                    "org_id": "133",
                    "stat": 0,
                    "vote": 9,
                  },
                ],
                "covid_expenditures": Array [],
                "fiscal_year": 2021,
              },
            ],
            "has_covid_data": Array [
              Object {
                "years_with_estimates": Array [
                  "2020",
                  "2021",
                ],
                "years_with_expenditures": Array [
                  "2020",
                ],
              },
            ],
            "id": "COV003",
            "name": "measure 3",
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Org has covid data 1`] = `
Object {
  "data": Object {
    "root": Object {
      "does_not_have_data": Object {
        "has_covid_data": Array [
          Object {
            "years_with_estimates": Array [],
            "years_with_expenditures": Array [],
          },
        ],
      },
      "has_data": Object {
        "has_covid_data": Array [
          Object {
            "years_with_estimates": Array [
              "2020",
              "2021",
            ],
            "years_with_expenditures": Array [
              "2020",
            ],
          },
        ],
      },
      "only_years_with_estimates": Object {
        "has_covid_data": Array [
          Object {
            "years_with_estimates": Array [
              "2020",
            ],
            "years_with_expenditures": Array [],
          },
          Object {
            "years_with_estimates": Array [
              "2020",
              "2021",
            ],
            "years_with_expenditures": Array [
              "2020",
            ],
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Specific covid measure 1`] = `
Object {
  "data": Object {
    "root": Object {
      "covid_measure": Object {
        "has_covid_data": Array [
          Object {
            "years_with_estimates": Array [
              "2020",
              "2021",
            ],
            "years_with_expenditures": Array [
              "2020",
            ],
          },
        ],
        "id": "COV001",
        "name": "measure 1",
      },
    },
  },
}
`;
